--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+
         {
-            "name": "Make & Launch in BGB",
+            "name": "Build & Launch in BGB",
             "type": "PowerShell",
             "request": "launch",
             "script": "${workspaceFolder}/bin/make.ps1",
@@ -14,13 +16,15 @@
             ],
             "cwd": "${workspaceFolder}"
         },
+        
         {
             "type": "emulicious-debugger",
             "request": "launch",
             "name": "Launch in Emulicious",
             "program": "${workspaceFolder}/out/GBordle.gb",
             "port": 58870,
-            "stopOnEntry": true
+            "stopOnEntry": false,
+            "preLaunchTask": "Build"
         }
     ]
 }
